Cleans up client&server merge.

--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha --exit",
-    "start": "node server/server.js"
+    "start:client": "webpack-dev-server --mode development ./client/index.js --open --config client/webpack.config.js",
+    "start:server": "nodemon server/server.js",
+    "start": "npm run start:client & npm run start:server" 
   },
   "repository": {
     "type": "git",
