--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "mocha --exit",
+    "test": "mocha --recursive --exit",
     "start:client": "webpack-dev-server --mode development ./client/index.js --open --config client/webpack.config.js",
     "start:server": "nodemon server/server.js",
     "start": "npm run start:client & npm run start:server" 
