--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "mocha --recursive 'server/test/test.*.js' --exit",
     "start:client": "webpack-dev-server --mode development ./client/index.js --open --config client/webpack.config.js",
     "start:server": "nodemon server/server.js",
-    "start": "npm run start:client & npm run start:server" 
+    "start": "npm run start:client & npm run start:server"
   },
   "repository": {
     "type": "git",
@@ -36,6 +36,7 @@
     "mongoose": "^5.2.5",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
+    "react-router-dom": "^4.3.1",
     "webpack": "^4.16.5",
     "webpack-cli": "^3.1.0",
     "webpack-dev-server": "^3.1.5"
