--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
   "devDependencies": {
     "chai": "^4.1.2",
     "chai-http": "^4.0.0",
+    "file-loader": "^1.1.11",
     "mocha": "^5.2.0"
   }
 }
