--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "jazzDash",
   "version": "1.0.0",
-  "description": "",
+  "description": "A Dashboard using react, redux, d3, responsive design, mongo, express, & personal research.",
   "main": "index.js",
   "scripts": {
     "test": "mocha --recursive 'server/test/test.*.js' --exit",
@@ -36,7 +36,9 @@
     "mongoose": "^5.2.5",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
+    "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
+    "redux": "^4.0.0",
     "webpack": "^4.16.5",
     "webpack-cli": "^3.1.0",
     "webpack-dev-server": "^3.1.5"
