--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "express": "^4.16.3",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
+    "immutable": "^3.8.2",
     "jest": "^23.5.0",
     "mini-css-extract-plugin": "^0.4.1",
     "mongoose": "^5.2.5",
