--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha --recursive 'server/test/test.*.js' --exit",
-    "start:client": "webpack-dev-server --mode development ./client/index.js --open --config client/webpack.config.js",
+    "start:client": "webpack-dev-server --mode development ./client/index.js --open 'Google Chrome' --config client/webpack.config.js",
     "start:server": "nodemon server/server.js",
     "start": "npm run start:server & npm run start:client"
   },
