--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "body-parser": "^1.18.3",
     "css-loader": "^1.0.0",
     "d3": "^5.7.0",
+    "d3-selection-multi": "^1.0.1",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "html-loader": "^0.5.5",
