--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "mocha --recursive 'server/test/test.*.js' --exit",
     "start:client": "webpack-dev-server --mode development ./client/index.js --open 'Google Chrome' --config client/webpack.config.js",
-    "start:server": "nodemon server/server.js",
+    "start:server": "node server/server.js",
     "start": "npm run start:server & npm run start:client"
   },
   "repository": {
