--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "mocha --recursive 'server/test/test.*.js' --exit",
     "start:client": "webpack-dev-server --mode development ./client/index.js --config client/webpack.config.js",
     "start:server": "node server/server.js",
-    "start": "npm run start:server & npm run start:client"
+    "start": "node server/server.js" //"npm run start:server & npm run start:client"
   },
   "repository": {
     "type": "git",
