--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "mocha --recursive 'server/test/test.*.js' --exit",
     "start:client": "webpack-dev-server --mode development ./client/index.js --config client/webpack.config.js",
     "start:server": "node server/server.js",
-    "start": "node server/server.js"
+    "start": "npm run start:server",
+    "start:local": "npm run start:server & npm run start:client"
   },
   "repository": {
     "type": "git",
