updates images for production.

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "mocha --recursive 'server/test/test.*.js' --exit",
     "start:client": "webpack-dev-server --mode development ./client/index.js --config client/webpack.config.js",
-    "start:clientbuild": "webpack --mode production ./client/index.js --config client/webpack.config.js",
+    "start:clientbuild": "webpack --mode production ./client/index.js --config client/webpack.config.js && cp -a client/imgs/ dist/imgs/",
     "start:server": "node server/server.js",
     "start": "npm run start:server",
     "start:local:build": "npm run start:server & npm run start:client",
