--- a/package.json
+++ b/package.json
@@ -34,17 +34,20 @@
     "d3": "^5.7.0",
     "d3-selection-multi": "^1.0.1",
     "dotenv": "^6.0.0",
+    "enzyme": "^3.8.0",
+    "enzyme-adapter-react-16": "^1.7.1",
     "express": "^4.16.3",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "immutable": "^3.8.2",
-    "jest": "^23.5.0",
+    "jest": "^23.6.0",
     "mini-css-extract-plugin": "^0.4.1",
     "mongoose": "^5.2.5",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
+    "react-test-renderer": "^16.6.3",
     "redux": "^4.0.0",
     "redux-immutable": "^4.0.0",
     "redux-logger": "^3.0.6",
