--- a/package.json
+++ b/package.json
@@ -61,5 +61,8 @@
     "chai-http": "^4.0.0",
     "file-loader": "^1.1.11",
     "mocha": "^5.2.0"
+  },
+  "jest": {
+    "setupTestFrameworkScriptFile": "./test/enzyme.setup.js"
   }
 }
