--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A Dashboard using react, redux, d3, responsive design, mongo, express, & personal research.",
   "main": "index.js",
   "scripts": {
-    "test": "mocha --recursive 'server/test/test.*.js' --exit",
+    "test": "jest",
     "start:client": "webpack-dev-server --mode development ./client/index.js --config client/webpack.config.js",
     "start:clientbuild": "webpack --mode production ./client/index.js --config client/webpack.config.js && cp -a client/imgs/ dist/imgs/",
     "start:server": "node server/server.js",
@@ -25,6 +25,7 @@
   "homepage": "https://github.com/imagineLife/jazzDash#readme",
   "dependencies": {
     "babel-core": "^6.26.3",
+    "babel-jest": "^23.6.0",
     "babel-loader": "^7.1.5",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.7.0",
@@ -52,6 +53,7 @@
     "redux-immutable": "^4.0.0",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
+    "regenerator-runtime": "^0.13.1",
     "webpack": "^4.16.5",
     "webpack-cli": "^3.1.0",
     "webpack-dev-server": "^3.1.5"
@@ -63,6 +65,6 @@
     "mocha": "^5.2.0"
   },
   "jest": {
-    "setupTestFrameworkScriptFile": "./test/enzyme.setup.js"
+    "setupTestFrameworkScriptFile": "./client/test/enzyme.setup.js"
   }
 }
