setup module mocking for jest testings

--- a/package.json
+++ b/package.json
@@ -65,6 +65,10 @@
     "mocha": "^5.2.0"
   },
   "jest": {
-    "setupTestFrameworkScriptFile": "./client/test/enzyme.setup.js"
+    "setupTestFrameworkScriptFile": "./client/test/enzyme.setup.js",
+     "moduleNameMapper": {
+      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.js",
+      "\\.(css|less)$": "<rootDir>/__mocks__/styleMock.js"
+    }
   }
 }
